Update design and page structure

--- a/index.html
+++ b/index.html
@@ -8,48 +8,56 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <div>
-        <img src="/images/vertical-form-image.jpg" alt="">
-        <img src="/images/logo-teamup.svg" alt="TeamUp's logo">
+    <div class="page">
+        <div class="image-container">
+            <img class="background-image" src="/images/vertical-form-image.jpg" alt="">
+    <!--         <div class="logo-container">
+                <img class="app-logo" src="/images/logo-teamup.svg" alt="TeamUp's logo">
+            </div> -->
+        </div>
+        <div class="content">
+            <div>
+                <h2>
+                    Want to easily schedule and organize football matches with your friends?
+                </h2>
+                <h1>
+                    Then go no further and become a part of TeamUp, a platform that allows you to easily manage the players and directly book and pay the pitch.
+                </h1>
+            </div>
+            <div class="form-container">
+                <p class="para">Let's do this!</p>
+                <form action="" method="post">
+                    <ul>
+                        <li>
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name">
+                        </li>
+                        <li>
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" id="last-name">
+                        </li>
+                        <li>
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email">
+                        </li>
+                        <li>
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <input type="tel" id="phone-number">
+                        </li>
+                        <li>
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password">
+                        </li>
+                        <li>
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <input type="password" id="confirm-password">
+                        </li>
+                    </ul>
+                    <button type="submit">Create Account</button>
+                    <p>Already have an account? <a href="">Log in</a></p>
+                </form>
+            </div>
+        </div>
     </div>
-    <div>
-        <h1>
-            Want to easily schedule and organize football matches with your friends?
-            Then go no further and become a part of TeamUp, a platform that allows you to easily manage the players and directly book and pay the pitch.
-        </h1>
-    </div>
-    <form action="" method="post">
-        <ul>
-            
-        </ul>
-        <li>
-            <label for="first-name">FIRST NAME</label>
-            <input type="text" id="first-name">
-        </li>
-        <li>
-            <label for="last-name">LAST NAME</label>
-            <input type="text" id="last-name">
-        </li>
-        <li>
-            <label for="email">EMAIL</label>
-            <input type="email" id="email">
-        </li>
-        <li>
-            <label for="phone-number">PHONE NUMBER</label>
-            <input type="tel" id="phone-number">
-        </li>
-        <li>
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password">
-        </li>
-        <li>
-            <label for="confirm-password">CONFIRM PASSWORD</label>
-            <input type="password" id="confirm-password">
-        </li>
-        <li>
-            <button type="submit">Create account</button>
-        </li>
-        <p>Already have an account? <a href="">Log in</a></p>
-    </form>
 </body>
 </html>
