Add password fields validation and error message

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
                         </li>
                         <li>
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password">
+                            <input type="password" id="password" class="error">
+                            <p class="password-mismatch-error">* Passwords do not match</p>
                         </li>
                         <li>
                             <label for="confirm-password">CONFIRM PASSWORD</label>
-                            <input type="password" id="confirm-password">
+                            <input type="password" id="confirm-password" class="error">
                         </li>
                     </ul>
                     <button type="submit">Create Account</button>
