Check passwords when input value changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Want to easily schedule and organize football matches with your friends?
                 </h2>
                 <h1>
-                    Then go no further and become a part of TeamUp, a platform that allows you to easily manage the players and directly book and pay the pitch.
+                    Then go no further and become a part of TeamUp, a platform that allows you to easily manage the players and directly book the pitch.
                 </h1>
             </div>
             <div class="form-container">
@@ -54,7 +54,7 @@
                             <input type="password" id="confirm-password" class="error">
                         </li>
                     </ul>
-                    <button type="submit">Create Account</button>
+                    <button type="submit" id="submit-button" disabled>Create Account</button>
                     <p>Already have an account? <a href="">Log in</a></p>
                 </form>
             </div>
