Make sure error is shown if passwords don't match

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <li>
                             <label for="password">PASSWORD</label>
                             <input type="password" id="password" class="error">
-                            <p class="password-mismatch-error">* Passwords do not match</p>
+                            <p class="password-mismatch-error"></p>
                         </li>
                         <li>
                             <label for="confirm-password">CONFIRM PASSWORD</label>
